5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1578_1328.log
== TEST (2019-03-11 19:55:24) 
-- CODE:
A=20
T=35*20
R=700
print(A+T=R)
-- ERROR:
File "XXXX", line 4
    print(A+T=R)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:55:29) 
-- CODE:
A=20
T=35*20
R=700
print(A+T=R)
-- EXECUTION TIME:
0.198711
-- ERROR:
  File "/home/codebench/codes/1578/1328/main.py", line 4
    print(A+T=R)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:34) 
-- CODE:
A=20
T=35*20
R=700
print(A+T=R)
-- ERROR:
File "XXXX", line 4
    print(A+T=R)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:42) 
-- CODE:
A=20
T=35x20
R=700
print(A+T=R)
-- ERROR:
File "XXXX", line 2
    T=35x20
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:55:54) 
-- CODE:
A=20
T=35.20
R=700
print(A+T=R)
-- ERROR:
File "XXXX", line 4
    print(A+T=R)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:56:57) 
-- CODE:
A=20
R=35
T=A*R
print(T)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:57:01) 
-- CODE:
A=20
R=35
T=A*R
print(T)
-- EXECUTION TIME:
0.16729
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
